<resources>
    <string name="app_name">StoryApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_image">Login Image</string>
    <string name="wellcome_let_s_sign">Wellcome, Let\'s sign</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_account">Not Have Account?</string>
    <string name="register">Register</string>
    <string name="register_image">Register Image</string>
    <string name="let_s_create_an_account">Let\'s Create an Account</string>
    <string name="i_have_an_account">I Have an Account</string>
    <string name="username">Username</string>
    <string name="register_success">Register Success</string>
    <string name="login_success">Login Success</string>
    <string name="email_error">Email address is not valid</string>
    <string name="password_error">Password must at least 8 characters</string>
    <string name="story_image">Story Image</string>
    <string name="fahmi_idris">Fahmi Idris</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="stories">Stories</string>
    <string name="retry">Retry</string>
    <string name="date">17 Agustus 1945</string>
    <string name="map_page">Map Page</string>
    <string name="logout">Logout</string>
    <string name="create_your_story">Create Your Story</string>
    <string name="camera_image">Camera Image</string>
    <string name="select_image_from">Select image from:</string>
    <string name="camera">Camera</string>
    <string name="write_a_description">Write a description:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>