<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="48dp"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/fahmi_idris"
        android:textStyle="bold"
        android:textColor="@color/darker_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/date"
        android:textStyle="italic"
        android:transitionName="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/story_image"
        tools:src="@drawable/img_story"
        android:scaleType="centerCrop"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_story"
        tools:text="@string/lorem_ipsum"
        android:textStyle="italic"
        android:textColor="@color/dark_green"
        android:layout_marginVertical="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>